<resources>
    <string name="app_name">IdentityManager</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_description">Sets your preferred language</string>
    <string name="english_button">English</string>
    <string name="italian_button">Italian</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Displays light text on a black background instead of the traditional black text on white background</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="statistics_title">Statistics</string>
    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="fab_button">Fab button</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="more">More</string>
    <string name="new_account">New account</string>
    <string name="modify_account">Modify account</string>
    <string name="account_name">Account name :</string>
    <string name="category">Category :</string>
    <string name="email">Email :</string>
    <string name="username_account_detail">Username :</string>
    <string name="password_account_password">Password :</string>
    <string name="password_strength">Password strength :</string>
    <string name="account_name_text">Account name</string>
    <string name="category_text">Category</string>
    <string name="email_text">Email</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="password_strength_text">Password strength</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="suggest">Suggest</string>
    <string name="save">Save</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="select_category">Select category</string>
    <string name="go_back">Go back</string>
    <string name="account_details">Account details</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="show_all">Show all</string>
    <string name="show_favorites">Show favorites</string>
    <string name="name">Name :</string>
    <string name="name_hint">Name</string>
    <string name="surname">Surname :</string>
    <string name="surname_hint">Surname</string>
    <string name="birthday">Birthday :</string>
    <string name="birthday_hint">Birthday</string>
    <string name="country">Country :</string>
    <string name="country_hint">Country</string>
    <string name="phone">Phone :</string>
    <string name="phone_hint">Phone</string>
    <string name="edit_profile">Edit profile</string>
</resources>