<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/settings_title"
                app:titleTextColor="?attr/topColorText">
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/change_language"
            android:textColor="?attr/insideText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/change_language_description"
            android:textColor="?attr/insideText"
            android:textSize="20sp" />


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="318dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:textColor="?attr/insideText">

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="148dp"
                android:layout_height="60dp"
                android:text="@string/english_button"
                android:textColor="?attr/insideText"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="148dp"
                android:layout_height="60dp"
                android:text="@string/italian_button"
                android:textColor="?attr/insideText"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/dark_mode"
            android:textColor="?attr/insideText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginBottom="5dp"
            android:text="@string/dark_mode_description"
            android:textColor="?attr/insideText"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/s1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textColor="?attr/insideText" />

    </LinearLayout>

</RelativeLayout>